# willow

./: Cargo.toml  README.md  todo.md
.github/workflows/: ci.yml
examples/: config.json  config.toml  config.yaml
src/: action.rs  condition.rs  config.rs  debouncer.rs  engine.rs  fs.rs  lib.rs  main.rs  matcher.rs  models.rs  rule.rs  template.rs  watcher.rs
src/actions/: action.rs  exec.rs  log.rs  mod.rs  move_action.rs  rename.rs
src/conditions/: conditions.rs  contains.rs  event.rs  extension.rs  glob.rs  mod.rs  regex.rs  size.rs
src/engine/: action_sink.rs  condition_stage.rs  context.rs  mod.rs  pipeline.rs  stability_stage.rs
src/engine/stages/: io_filter.rs  mod.rs  sink.rs  stability.rs  static_filter.rs
src/rules/: mod.rs  rule_engine.rs
src/watcher/: mod.rs  watcher.rs
tests/: e2e.rs
