[package]
name = "willow"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.136"
serde_derive = "1.0.136"
notify = { version = "8.1.0", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive"] }
serde_json = "1.0.143"
regex = "1.0"
glob = "0.3"
anyhow = "1.0.99"
notify-debouncer-full = "0.5.0"
log = "0.4.27"
env_logger = "0.11.8"
